2010-02-12 15:49  rsbivand

	* DESCRIPTION, NAMESPACE, R/ogr.R, R/sp_gdal.R, man/readGDAL.Rd,
	  man/readOGR.Rd: adding direct access to spatial refs

2010-01-03 14:48  rsbivand

	* R/ogr_write.R, DESCRIPTION, ChangeLog, inst/ChangeLog: POSIXt as
	  double in writeOGR

2009-12-06 19:42  rsbivand

	* DESCRIPTION, man/SpatialGDAL-class.Rd, ChangeLog, inst/ChangeLog:
	  S4 tidy

2009-12-04 18:52  edzer

	* R/sgdf_gdal.R, man/SpatialGDAL-class.Rd: changes to $ and $<-
	  signatures, to make rgdal pass in recent R base on svn

2009-11-26 21:25  rsbivand

	* ChangeLog, DESCRIPTION, R/sp_gdal.R, src/gdal-bindings.cpp,
	  inst/ChangeLog: adding metadata and subdatasets to GDALinfo

2009-11-08 19:16  rsbivand

	* R/AAA.R, ChangeLog, inst/ChangeLog: fix unloading problem

2009-11-08 18:13  rsbivand

	* R/AAA.R: fix unloading problem

2009-11-07 14:05  rsbivand

	* man/writeOGR.Rd, ChangeLog, DESCRIPTION, inst/ChangeLog: writing
	  logical OGR fields as integer

2009-11-07 13:53  rsbivand

	* R/ogr_write.R: writing logical OGR fields as integer

2009-10-29 21:23  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2009-10-28 12:33  rsbivand

	* DESCRIPTION, R/gdal.R, R/sgdf_gdal.R, R/sp_gdal.R, R/subs.R,
	  src/gdal-bindings.cpp: reporting on GetGeoTransform failure

2009-10-05 15:46  rsbivand

	* R/sp_gdal.R, man/readGDAL.Rd, ChangeLog, inst/ChangeLog: bug fix
	  in grid parameters for offset, region and decimation together

2009-10-04 21:30  rsbivand

	* DESCRIPTION, R/sp_gdal.R, ChangeLog, inst/ChangeLog: bug fix in
	  grid parameters for offset, region and decimation together

2009-09-09 08:41  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2009-09-06 10:47  rsbivand

	* DESCRIPTION, R/sp_gdal.R, ChangeLog, inst/ChangeLog: back out of
	  structure change in GDALinfo output

2009-09-03 15:03  rsbivand

	* DESCRIPTION, man/SpatialGDAL-class.Rd, man/readGDAL.Rd,
	  man/showWKT.Rd, ChangeLog, inst/ChangeLog: tidying docs links for
	  2.10.0

2009-09-02 20:33  rsbivand
